Skip to content

mac: float-on-top hides Resume dialog

If float-on-top was enabled previously, it hides the application-global "modal" resume dialog. And there is no API to also bump the level of the modal dialog. It does not matter if the floating window level is set before or after the alert was created.

Stupid cocoa...

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information