macosx: Create custom resume dialog, refactor

Create own resume dialog, which acts the same way as a floating
window. Thus it does not disturb the user more than any
other VLC panel and consequently does not block the user in doing
other operations.

This fixes floating behaviour (#13886) any makes it more easy
to implement any other fancy_dialog_whatever we might add later.
Current design is a copy of the currently used alert window.

Also raised the timeout value to 10 secs as users are complaining
6 sec is not long enough.

close #13886